--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .jsp
 spring.messages.basename=validation
 
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
 spring.datasource.username=root
 spring.datasource.password=root
