configured application.properties to consume environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.mvc.view.suffix: .jsp
 spring.messages.basename=validation
 
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
